[FRONT-END] styles.css created

--- a/Tranqueerity/src/main/index.html
+++ b/Tranqueerity/src/main/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tranqueerity</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="container">
+    <h1 class="title">Tranqueerity</h1>
+    <div class="search-bar">
+        <div class="search-icon"></div>
+    </div>
 
+    <div class="card-list">
+        <div class="card">
+            <img src="https://placehold.co/296x143" alt="Luogo 1" class="card-image">
+            <div class="card-info">
+                <h2 class="card-title">Luogo 1</h2>
+                <p class="card-address">Via Giovanni Paolo II</p>
+            </div>
+            <div class="card-icons"></div>
+        </div>
+
+        <div class="card">
+            <img src="https://placehold.co/296x144" alt="Luogo 2" class="card-image">
+            <div class="card-info">
+                <h2 class="card-title">Luogo 2</h2>
+                <p class="card-address">Via Giovanni Paolo II</p>
+            </div>
+            <div class="card-icons"></div>
+        </div>
+
+        <div class="card">
+            <img src="https://placehold.co/296x143" alt="Luogo 3" class="card-image">
+            <div class="card-info">
+                <h2 class="card-title">Luogo 3</h2>
+                <p class="card-address">Via Giovanni Paolo II</p>
+            </div>
+            <div class="card-icons"></div>
+        </div>
+    </div>
+
+    <!--<div class="fab">
+        <div class="fab-icon"></div>
+    </div>-->
+    <div class="add">
+        <img src="img/Plus.png" alt="Aggiungi" class="add-icon">
+    </div>
+</div>
 </body>
 </html>
