--- a/Tranqueerity/src/main/recensioneLuogo.html
+++ b/Tranqueerity/src/main/recensioneLuogo.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <title>Tranqueerity - Recensisci Luogo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/recensioneStyle.css">
 </head>
 <body>
+<div class="container">
+    <div class="card">
+        <!-- Top Icon -->
+        <button class="icon-button top-left">
+            <img src="./img/Arrow%20left.png" alt="Back" class="icon-img">
+        </button>
 
+        <!-- Immagine -->
+        <div class="img-container">
+            <img class="image" src="https://placehold.co/430x228" alt="Luogo" />
+        </div>
+
+        <!-- Titolo e Indirizzo -->
+        <div class="location">
+            <h2 class="location-title">Luogo 1</h2>
+            <p class="location-address">Via Giovanni Paolo II</p>
+        </div>
+
+        <!-- Stelle -->
+        <div class="rating-icons">
+            <div class="icon"><img src="img/star.png"></div>
+            <div class="icon"><img src="img/star.png"></div>
+            <div class="icon"><img src="img/star.png"></div>
+            <div class="icon"><img src="img/star.png"></div>
+            <div class="icon"><img src="img/star.png"></div>
+        </div>
+
+        <!-- Commento principale -->
+        <div class="review-section">
+            <div class="username">Lucia</div>
+            <div class="comment">Luogo poco accogliente</div>
+        </div>
+
+        <!-- Tags -->
+        <div class="tags">
+            <span class="tag">Aggiungi tag</span>
+            <span class="tag plus">+</span>
+        </div>
+
+        <!-- Altri profili -->
+        <div class="other-reviews">
+            <div class="review-item">
+                <div class="profile">Profilo 1</div>
+                <div class="review">Recensione 1</div>
+            </div>
+            <div class="review-item">
+                <div class="profile">Profilo 2</div>
+                <div class="review">Recensione 2</div>
+            </div>
+            <div class="review-item">
+                <div class="profile">Profilo 3</div>
+                <div class="review">Recensione 3</div>
+            </div>
+        </div>
+
+        <!-- Bottoni -->
+        <div class="buttons-row">
+            <button class="icon-button"></button>
+            <button class="icon-small"></button>
+        </div>
+
+        <button class="circle-button"></button>
+    </div>
+</div>
 </body>
 </html>
