[FRONT-END] CSS minor fixes

--- a/Tranqueerity/src/main/index.html
+++ b/Tranqueerity/src/main/index.html
@@ -10,9 +10,10 @@
 <div class="container">
     <h1 class="title">Tranqueerity</h1>
     <div class="search-bar">
-        <div class="search-icon"></div>
+        <div class="search-icon">
+            <img src="img/Search.png" class="search-icon">
+        </div>
     </div>
-
     <div class="card-list">
         <div class="card">
             <img src="https://placehold.co/296x143" alt="Luogo 1" class="card-image">
