--- a/Tranqueerity/src/main/recensioneLuogo.html
+++ b/Tranqueerity/src/main/recensioneLuogo.html
@@ -68,7 +68,9 @@
             <button class="icon-small"></button>
         </div>
 
-        <button class="circle-button"></button>
+        <button class="circle-button">
+            <img src="img/Plus.png">
+        </button>
     </div>
 </div>
 </body>
