--- a/Tranqueerity/src/main/aggiuntaLuogo.html
+++ b/Tranqueerity/src/main/aggiuntaLuogo.html
@@ -7,33 +7,25 @@
   <link rel="stylesheet" href="style/creazioneLuogo.css">
 </head>
 <body>
-<div class="container">
-  <h1 class="title">Tranqueerity</h1>
-
-  <div class="place-card">
-    <input class="input-text" type="text" placeholder="Nome del luogo">
-
-    <div class="map-preview">
-      <span class="map-icon">📍</span>
+    <div class="container">
+        <button onclick="window.location.href='index.html'" style="margin-bottom: 20px; padding: 10px; cursor: pointer;">Torna alla Home</button>
+        <h1>Aggiungi un Nuovo Luogo</h1>
+        <form id="addPlaceForm" style="display: flex; flex-direction: column; gap: 15px;">
+            <div>
+                <label for="placeName">Nome del Luogo:</label>
+                <input type="text" id="placeName" name="placeName" required style="width: 100%; padding: 8px; box-sizing: border-box;">
+            </div>
+            <div>
+                <label for="placeAddress">Indirizzo:</label>
+                <input type="text" id="placeAddress" name="placeAddress" required style="width: 100%; padding: 8px; box-sizing: border-box;">
+            </div>
+            <div>
+                <label for="placeImage">URL Immagine:</label>
+                <input type="url" id="placeImage" name="placeImage" placeholder="https://example.com/image.jpg" required style="width: 100%; padding: 8px; box-sizing: border-box;">
+            </div>
+            <button type="submit" style="padding: 10px 15px; cursor: pointer;">Aggiungi Luogo</button>
+        </form>
     </div>
-
-    <p class="address-label">Indirizzo:</p>
-    <input class="input-text" type="text" placeholder="Inserisci l'indirizzo">
-    <div class="divider"></div>
-
-    <div class="opinion-section">
-      <h3>Condividi la tua opinione</h3>
-      <p class="user-name">Lucia</p>
-      <div class="stars">
-        <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
-      </div>
-      <textarea placeholder="Scrivi qui..."></textarea>
-    </div>
-  </div>
-
-  <div class="add">
-    <img src="img/Plus.png" alt="Aggiungi" class="add-icon">
-  </div>
-</div>
+    <script src="scripts/aggiuntaLuogo.js"></script>
 </body>
 </html>
