--- a/Tranqueerity/src/main/index.html
+++ b/Tranqueerity/src/main/index.html
@@ -15,6 +15,8 @@
         </div>
     </div>
     <div class="card-list">
+        <!-- Cards will be dynamically created with JavaScript -->
+        <!--
         <div class="card">
             <img src="https://placehold.co/296x143" alt="Luogo 1" class="card-image">
             <div class="card-info">
@@ -41,14 +43,16 @@
             </div>
             <div class="card-icons"></div>
         </div>
+        -->
     </div>
 
     <!--<div class="fab">
         <div class="fab-icon"></div>
     </div>-->
-    <div class="add">
+    <div class="add" onclick="window.location.href='aggiuntaLuogo.html'" style="cursor: pointer;">
         <img src="img/Plus.png" alt="Aggiungi" class="add-icon">
     </div>
 </div>
+<script src="scripts/index.js"></script>
 </body>
 </html>
