--- a/Tranqueerity/src/main/nuovoEvento.html
+++ b/Tranqueerity/src/main/nuovoEvento.html
@@ -47,7 +47,7 @@
   </div>
 </div>
 
-<script src="nuovoEventoJS.js"></script>
+<script src="scripts/nuovoEventoJS.js"></script>
 
 </body>
 </html>
