--- a/Tranqueerity/src/main/aggiuntaLuogo.html
+++ b/Tranqueerity/src/main/aggiuntaLuogo.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tranqueerity - Nuovo luogo</title>
-  <link rel="stylesheet" href="style/creazioneLuogo.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tranqueerity - Nuovo luogo</title>
+    <link rel="stylesheet" href="style/creazioneLuogo.css">
 </head>
 <body>
-    <div class="container">
-        <button onclick="window.location.href='index.html'" style="margin-bottom: 20px; padding: 10px; cursor: pointer;">Torna alla Home</button>
-        <h1>Aggiungi un Nuovo Luogo</h1>
+<header>Tranqueerity</header>
+
+<div class="container">
+
+    <button onclick="window.location.href='index.html'" style="margin-bottom: 20px; padding: 10px; cursor: pointer;">Torna alla Home</button>
+
+    <h1 class="title">Tranqueerity</h1>
+    <h1>Aggiungi un Nuovo Luogo</h1>
+
+    <div class="place-card">
+
+        <!-- Input di preview come nel secondo HTML -->
+        <input class="input-text" type="text" placeholder="Nome del luogo">
+
+        <!-- Mappa con icona -->
+        <div class="map-preview">
+            <span class="map-icon">📍</span>
+        </div>
+
+        <!-- Divider -->
+        <div class="divider"></div>
+
+        <!-- FORM ORIGINALE NON MODIFICATO -->
         <form id="addPlaceForm" style="display: flex; flex-direction: column; gap: 15px;">
             <div>
                 <label for="placeName">Nome del Luogo:</label>
@@ -17,7 +37,7 @@
             </div>
             <div>
                 <label for="placeAddress">Indirizzo:</label>
-                <input type="text" id="placeAddress" name="placeAddress" required style="width: 100%; padding: 8px; box-sizing: border-box;">
+                <input type="text" id="placeAddress" name="placeAddress" class="address-label">
             </div>
             <div>
                 <label for="placeImage">URL Immagine:</label>
@@ -25,7 +45,25 @@
             </div>
             <button type="submit" style="padding: 10px 15px; cursor: pointer;">Aggiungi Luogo</button>
         </form>
+
+        <!-- Sezione opinione come nel secondo HTML -->
+        <div class="opinion-section">
+            <h3>Condividi la tua opinione</h3>
+            <p class="user-name">Lucia</p>
+            <div class="stars">
+                <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+            </div>
+            <textarea placeholder="Scrivi qui..."></textarea>
+        </div>
     </div>
-    <script src="scripts/aggiuntaLuogo.js"></script>
+
+    <!-- Icona Aggiunta -->
+    <div class="add">
+        <img src="img/Plus.png" alt="Aggiungi" class="add-icon">
+    </div>
+
+</div>
+
+<script src="scripts/aggiuntaLuogo.js"></script>
 </body>
 </html>
