[FRONTEND] recensioneLuogo.html and style modified

--- a/Tranqueerity/src/main/recensioneLuogo.html
+++ b/Tranqueerity/src/main/recensioneLuogo.html
@@ -40,8 +40,8 @@
             <div class="username">Lucia</div>
             <div class="comment">
                 <label for="comment"></label>
-                <textarea id = "comment"></textarea>
-                <button onclick="addRecensione()" style="display: block">Aggiungi</button>
+                <textarea id = "comment" class="text-area"></textarea>
+                <button onclick="addRecensione()" class="button1">Conferma</button>
             </div>
         </div>
 
@@ -50,7 +50,7 @@
             <span class="tag">Aggiungi tag</span>
             <span class="tag plus">+</span>
         </div>
-
+        <hr><br>
         <!-- Altri profili -->
         <div class="other-reviews">
             <div class="review-item">
