[FRONTEND] nuovoEvento.html and event.css MODIFIED

--- a/Tranqueerity/src/main/nuovoEvento.html
+++ b/Tranqueerity/src/main/nuovoEvento.html
@@ -8,10 +8,11 @@
   <link rel="stylesheet" href="style/event.css" />
 </head>
 <body>
-
 <div class="container">
+  <div class="img-container">
+    <img class="image" src="https://placehold.co/430x228" alt="Luogo" />
+  </div>
   <div class="card">
-
   <form id="event-form">
     <textarea id="nomeEvento" placeholder="Nome evento"></textarea>
     <textarea id="orarioEvento" placeholder="Orario"></textarea>
