--- a/Tranqueerity/src/main/visualizzaRecensioni.html
+++ b/Tranqueerity/src/main/visualizzaRecensioni.html
@@ -1,10 +1,109 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>Tranqueerity - Visualizza recensioni</title>
+    <title>Tranqueerity - Visualizza Recensioni</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/recensioneStyle.css">
+    <script src="./scripts/recensioneLuogo.js"></script>
 </head>
 <body>
+<div class="container">
+    <div class="card">
+        <!-- Top Icon -->
+        <button class="icon-button top-left">
+            <img src="./img/Arrow%20left.png" alt="Back" class="icon-img">
+        </button>
 
+        <!-- Immagine -->
+        <div class="img-container">
+            <img class="image" src="https://placehold.co/430x228" alt="Luogo" />
+        </div>
+
+        <!-- Titolo e Indirizzo -->
+        <div class="location">
+            <h2 class="location-title">Luogo 1</h2>
+            <p class="location-address">Via Giovanni Paolo II</p>
+        </div>
+
+        <!-- Stelle -->
+        <div class="rating-icons">
+            <div class="icon" onclick="rating(1)"><img src="img/star.png"></div>
+            <div class="icon" onclick="rating(2)"><img src="img/star.png"></div>
+            <div class="icon" onclick="rating(3)"><img src="img/star.png"></div>
+            <div class="icon" onclick="rating(4)"><img src="img/star.png"></div>
+            <div class="icon" onclick="rating(5)"><img src="img/star.png"></div>
+        </div>
+
+        <!-- Tags -->
+        <div class="tags">
+            <span class="tag">Aggiungi tag</span>
+            <span class="tag plus">+</span>
+        </div>
+        <hr><br>
+        <br><br>
+        <!-- Altri profili -->
+        <div class="other-reviews">
+            <div class="review-item">
+                <div class="profile">Profilo 1</div>
+                <div class="review">Recensione 1
+                <div class="rating-review">
+                    <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
+                    <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
+                    <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
+                    <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
+                    <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
+                </div>
+                </div>
+            </div>
+            <div class="review-item">
+                <div class="profile">Profilo 2</div>
+                <div class="review">Recensione 2
+                    <div class="rating-review">
+                        <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="review-item">
+                <div class="profile">Profilo 3</div>
+                <div class="review">Recensione 3
+                    <div class="rating-review">
+                        <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="review-item">
+                <div class="profile">Profilo 4</div>
+                <div class="review">Recensione 4
+                    <div class="rating-review">
+                        <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Bottoni -->
+        <div class="buttons-row">
+            <button class="icon-button"></button>
+            <button class="icon-small"></button>
+        </div>
+
+        <button class="circle-button">
+            <img src="img/Plus.png">
+        </button>
+    </div>
+</div>
 </body>
 </html>
