[FRONTEND] visualizzaRecensioni.html and recensioneLuogo.html modified

--- a/Tranqueerity/src/main/recensioneLuogo.html
+++ b/Tranqueerity/src/main/recensioneLuogo.html
@@ -55,15 +55,36 @@
         <div class="other-reviews">
             <div class="review-item">
                 <div class="profile">Profilo 1</div>
-                <div class="review">Recensione 1</div>
+                <div class="review">Recensione 1
+                    <div class="rating-review">
+                        <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
+                    </div></div>
             </div>
             <div class="review-item">
                 <div class="profile">Profilo 2</div>
-                <div class="review">Recensione 2</div>
+                <div class="review">Recensione 2
+                    <div class="rating-review">
+                        <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
+                    </div></div>
             </div>
             <div class="review-item">
                 <div class="profile">Profilo 3</div>
-                <div class="review">Recensione 3</div>
+                <div class="review">Recensione 3
+                    <div class="rating-review">
+                        <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
+                    </div></div>
             </div>
         </div>
 
