--- a/Tranqueerity/src/main/visualizzaRecensioni.html
+++ b/Tranqueerity/src/main/visualizzaRecensioni.html
@@ -47,6 +47,7 @@
             <div class="review-item">
                 <div class="profile">Profilo 1</div>
                 <div class="review">Recensione 1
+                    <img src="img/AlertCircle.png" class="report-button">
                 <div class="rating-review">
                     <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
                     <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
@@ -59,6 +60,7 @@
             <div class="review-item">
                 <div class="profile">Profilo 2</div>
                 <div class="review">Recensione 2
+                    <img src="img/AlertCircle.png" class="report-button">
                     <div class="rating-review">
                         <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
                         <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
@@ -71,6 +73,7 @@
             <div class="review-item">
                 <div class="profile">Profilo 3</div>
                 <div class="review">Recensione 3
+                    <img src="img/AlertCircle.png" class="report-button">
                     <div class="rating-review">
                         <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
                         <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
@@ -83,6 +86,7 @@
             <div class="review-item">
                 <div class="profile">Profilo 4</div>
                 <div class="review">Recensione 4
+                    <img src="img/AlertCircle.png" class="report-button">
                     <div class="rating-review">
                         <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
                         <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
