Lavoro su stile e icone della search bar

--- a/Tranqueerity/src/main/index.html
+++ b/Tranqueerity/src/main/index.html
@@ -13,6 +13,16 @@
         <div class="search-icon">
             <img src="img/Search.png" class="search-icon">
         </div>
+
+        <span class="search-text">
+            <label>
+                <input type="text" placeholder="Inserisci un nome di luogo" class =search-text>
+            </label>
+        </span>
+
+        <div class="search-locat">
+            <img src="img/location_on.png" class ="search-locat">
+        </div>
     </div>
     <div class="card-list">
         <!-- Cards will be dynamically created with JavaScript -->
