Implementata simulazione del sistema di segnalazioni

--- a/Tranqueerity/src/main/visualizzaRecensioni.html
+++ b/Tranqueerity/src/main/visualizzaRecensioni.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/recensioneStyle.css">
     <script src="./scripts/recensioneLuogo.js"></script>
+    <script src="./scripts/segnalazione.js"></script>
 </head>
 <body>
 <div class="container">
@@ -47,7 +48,7 @@
             <div class="review-item">
                 <div class="profile">Profilo 1</div>
                 <div class="review">Recensione 1
-                    <img src="img/AlertCircle.png" class="report-button">
+                    <img src="img/AlertCircle.png" class="report-button" onclick="report()">
                 <div class="rating-review">
                     <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
                     <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
@@ -60,7 +61,7 @@
             <div class="review-item">
                 <div class="profile">Profilo 2</div>
                 <div class="review">Recensione 2
-                    <img src="img/AlertCircle.png" class="report-button">
+                    <img src="img/AlertCircle.png" class="report-button" onclick="report()">
                     <div class="rating-review">
                         <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
                         <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
@@ -73,7 +74,7 @@
             <div class="review-item">
                 <div class="profile">Profilo 3</div>
                 <div class="review">Recensione 3
-                    <img src="img/AlertCircle.png" class="report-button">
+                    <img src="img/AlertCircle.png" class="report-button" onclick="report()">
                     <div class="rating-review">
                         <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
                         <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
@@ -86,7 +87,7 @@
             <div class="review-item">
                 <div class="profile">Profilo 4</div>
                 <div class="review">Recensione 4
-                    <img src="img/AlertCircle.png" class="report-button">
+                    <img src="img/AlertCircle.png" class="report-button" onclick="report()">
                     <div class="rating-review">
                         <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
                         <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
