--- a/Tranqueerity/src/main/index.html
+++ b/Tranqueerity/src/main/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="title">Tranqueerity</h1>
+    <header>
+        <h1 class="title">Tranqueerity</h1>
+        <img src="img/logo.png" alt="logo" class="logo">
+    </header>
     <div class="search-bar">
         <div class="search-icon">
             <img src="img/Search.png" class="search-icon">
