[FRONTEND] visualizzaRecensioni.html updated

--- a/Tranqueerity/src/main/visualizzaRecensioni.html
+++ b/Tranqueerity/src/main/visualizzaRecensioni.html
@@ -42,7 +42,6 @@
             <span class="tag plus">+</span>
         </div>
         <hr><br>
-        <br><br>
         <!-- Altri profili -->
         <div class="other-reviews">
             <div class="review-item">
@@ -99,15 +98,14 @@
             </div>
         </div>
 
-        <!-- Bottoni -->
-        <div class="buttons-row">
+        <!--<div class="buttons-row">
             <button class="icon-button"></button>
             <button class="icon-small"></button>
-        </div>
+        </div>-->
 
-        <button class="circle-button">
-            <img src="img/Plus.png">
-        </button>
+        <div class="circle">
+            <button type="submit" class="circle-icon"><img src="img/Plus.png" alt="Aggiungi" class="circle-icon"></button>
+        </div>
     </div>
 </div>
 <div id="custom-modal" class="modal hidden">
