[FRONTEND] recensioneLuogo.html updated

--- a/Tranqueerity/src/main/recensioneLuogo.html
+++ b/Tranqueerity/src/main/recensioneLuogo.html
@@ -97,10 +97,9 @@
                 <img src="img/calendar.png" alt="event" id="event-button">
             </button>
         </div>
-
-        <button class="circle-button">
-            <img src="img/Plus.png">
-        </button>
+        <div class="circle">
+            <button type="submit" class="circle-icon"><img src="img/Plus.png" alt="Aggiungi" class="circle-icon"></button>
+        </div>
     </div>
 </div>
 </body>
