[FRONTEND] nuovoEvento.html and event.css fixed

--- a/Tranqueerity/src/main/nuovoEvento.html
+++ b/Tranqueerity/src/main/nuovoEvento.html
@@ -18,7 +18,7 @@
   <form id="event-form">
     <textarea id="nomeEvento" placeholder="Nome evento"></textarea>
     <textarea id="orarioEvento" placeholder="Orario"></textarea>
-    <textarea id="descrizioneEvento" placeholder="Descrizione"></textarea>
+    <textarea id="descrizioneEvento" placeholder="Descrizione" class="textarea-description"></textarea>
   </form>
 
   <!-- Bottone di conferma (immagine)
