--- a/Tranqueerity/src/main/index.html
+++ b/Tranqueerity/src/main/index.html
@@ -24,7 +24,7 @@
         </span>
 
         <div class="search-locat">
-            <img src="img/location_on.png" class ="search-locat">
+            <img src="img/location_on.png" class ="search-locat" onclick="locationOn()">
         </div>
     </div>
     <div class="card-list">
@@ -66,6 +66,45 @@
         <img src="img/Plus.png" alt="Aggiungi" class="add-icon">
     </div>
 </div>
+<div id="custom-modal" class="modal hidden">
+    <div class="modal-content">
+        <p>Per usare questa funzione bisogna attivare la geolocalizzazione.
+            <br>
+            Procedere?</p>
+        <button id="location-active">Si</button>
+        <button id="location-off">No</button>
+    </div>
+</div>
+<script>
+    function locationOn() {
+        const modal = document.getElementById("custom-modal");
+        modal.classList.remove("hidden");
+    }
+</script>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const modal = document.getElementById("custom-modal");
+        const confirmBtn = document.getElementById("location-active");
+        const cancelBtn = document.getElementById("location-off");
+        let currentButton = null;
+
+        document.querySelectorAll('.search-locat').forEach(button => {
+            button.addEventListener('click', function () {
+                currentButton = button;
+                modal.classList.remove('hidden');
+            });
+        });
+
+        confirmBtn.addEventListener('click', function () {
+            modal.classList.add('hidden');
+            alert("Geolocalizzazione attivata");
+        });
+
+        cancelBtn.addEventListener('click', function () {
+            modal.classList.add('hidden');
+        });
+    });
+</script>
 <script src="scripts/index.js"></script>
 </body>
 </html>
