[FRONTEND] glassmorphism effect added in visualizzaRecensioni.html

--- a/Tranqueerity/src/main/visualizzaRecensioni.html
+++ b/Tranqueerity/src/main/visualizzaRecensioni.html
@@ -38,8 +38,8 @@
 
         <!-- Tags -->
         <div class="tags">
-            <span class="tag">Aggiungi tag</span>
-            <span class="tag plus">+</span>
+            <span class="tag">Accogliente</span>
+            <span class="tag">Ospitalita'</span>
         </div>
         <hr><br>
         <!-- Altri profili -->
