[FRONTEND] Aggiornamento degli stili

--- a/Tranqueerity/src/main/aggiuntaLuogo.html
+++ b/Tranqueerity/src/main/aggiuntaLuogo.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tranqueerity - Nuovo luogo</title>
+    <link rel="stylesheet" href="style/styles.css">
     <link rel="stylesheet" href="style/creazioneLuogo.css">
 </head>
 <body>
-<header>Tranqueerity</header>
-
 <div class="container">
 
-    <button onclick="window.location.href='index.html'" style="margin-bottom: 20px; padding: 10px; cursor: pointer;">Torna alla Home</button>
-
-    <h1 class="title">Tranqueerity</h1>
-    <!-- <h3>Aggiungi un Nuovo Luogo</h3>-->
+     <header>
+        <div class="logo-container">
+            <a href="index.html"><img src="img/logo.png" alt="logo" class="logo"></a>
+            <a href="index.html"><h1 class="title">Tranqueerity</h1></a>
+        </div>
+    </header>
 
     <div class="place-card">
 
