Fix alla posizione e aggiunta immagine

--- a/Tranqueerity/src/main/index.html
+++ b/Tranqueerity/src/main/index.html
@@ -73,7 +73,7 @@
         <p>Per usare questa funzione bisogna attivare la geolocalizzazione.
             <br>
             Procedere?</p>
-        <button id="location-active">Si</button>
+        <button value="true" id="location-active">Si</button>
         <button id="location-off">No</button>
     </div>
 </div>
