--- a/Tranqueerity/src/main/visualizzaRecensioni.html
+++ b/Tranqueerity/src/main/visualizzaRecensioni.html
@@ -39,7 +39,9 @@
         </div>
 
         <div class="circle">
+            <a href="nuovoEvento.html">
             <button type="submit" class="circle-icon"><img src="img/Plus.png" alt="Aggiungi" class="circle-icon"></button>
+            </a>
         </div>
     </div>
 </div>
