--- a/Tranqueerity/src/main/dummyPosizione.html
+++ b/Tranqueerity/src/main/dummyPosizione.html
@@ -28,8 +28,12 @@
       setTimeout(redirect,3000);
 
       function redirect(){
-        window.location.href="index.html";
-        console.log("Redirezione in corso")
+
+          document.querySelector('#1').style.display = "none";
+          document.querySelector('#2').style.display = "none";
+
+          console.log("Redirezione in corso");
+          window.location.href="index.html";
       }
     </script>
 </body>
