--- a/Tranqueerity/src/main/visualizzaRecensioni.html
+++ b/Tranqueerity/src/main/visualizzaRecensioni.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <title>Tranqueerity - Visualizza Recensioni</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/styles.css">
     <link rel="stylesheet" href="style/recensioneStyle.css">
-    <script src="./scripts/recensioneLuogo.js"></script>
-    <script src="./scripts/segnalazione.js"></script>
 </head>
 <body>
-<div class="container">
+
     <div class="card">
         <!-- Top Icon -->
-        <button class="icon-button top-left">
+        <button class="icon-button top-left" onclick="window.location.href='index.html'" style="cursor:pointer">
             <img src="./img/Arrow%20left.png" alt="Back" class="icon-img">
         </button>
 
@@ -23,8 +22,8 @@
 
         <!-- Titolo e Indirizzo -->
         <div class="location">
-            <h2 class="location-title">Luogo 1</h2>
-            <p class="location-address">Via Giovanni Paolo II</p>
+            <h2 class="location-title"></h2>
+            <p class="location-address"></p>
         </div>
 
         <!-- Stelle -->
@@ -35,11 +34,19 @@
             <div class="icon" onclick="rating(4)"><img src="img/star.png"></div>
             <div class="icon" onclick="rating(5)"><img src="img/star.png"></div>
         </div>
-
+        <!-- Commento principale -->
+        <div class="review-section">
+            <div class="username">Lucia</div>
+            <div class="comment">
+                <label for="comment"></label>
+                <textarea id = "comment" class="text-area"></textarea>
+                <button onclick="addRecensione()" class="button1">Conferma</button>
+            </div>
+        </div>
         <!-- Tags -->
         <div class="tags">
-            <span class="tag">Accogliente</span>
-            <span class="tag">Ospitalita'</span>
+            <span class="tag">Aggiungi tag</span>
+            <span class="tag plus">+</span>
         </div>
         <hr><br>
         <!-- Altri profili -->
@@ -48,13 +55,13 @@
                 <div class="profile">Profilo 1</div>
                 <div class="review">Recensione 1
                     <img src="img/AlertCircle.png" class="report-button" onclick="report()">
-                <div class="rating-review">
-                    <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
-                    <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
-                    <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
-                    <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
-                    <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
-                </div>
+                    <div class="rating-review">
+                        <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
+                        <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
+                    </div>
                 </div>
             </div>
             <div class="review-item">
@@ -83,19 +90,6 @@
                     </div>
                 </div>
             </div>
-            <div class="review-item">
-                <div class="profile">Profilo 4</div>
-                <div class="review">Recensione 4
-                    <img src="img/AlertCircle.png" class="report-button" onclick="report()">
-                    <div class="rating-review">
-                        <div class="r-icon" onclick="rating(1)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(2)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(3)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(4)"><img src="img/star.png"></div>
-                        <div class="r-icon" onclick="rating(5)"><img src="img/star.png"></div>
-                    </div>
-                </div>
-            </div>
         </div>
 
         <!--<div class="buttons-row">
@@ -104,10 +98,12 @@
         </div>-->
 
         <div class="circle">
-            <button type="submit" class="circle-icon"><img src="img/Plus.png" alt="Aggiungi" class="circle-icon"></button>
+            <a href="nuovoEvento.html">
+                <button type="submit" class="circle-icon"><img src="img/Plus.png" alt="Aggiungi" class="circle-icon"></button>
+            </a>
         </div>
     </div>
-</div>
+
 <div id="custom-modal" class="modal hidden">
     <div class="modal-content">
         <p>Vuoi segnalare questa recensione?</p>
