Modifica del placeholder del campo orario nella pagina del nuovo evento

--- a/Tranqueerity/src/main/nuovoEvento.html
+++ b/Tranqueerity/src/main/nuovoEvento.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Crea Evento - Tranqueerity</title>
   <link rel="stylesheet" href="style/event.css" />
+
 </head>
 <body>
 <div class="container">
@@ -17,7 +18,7 @@
   <div class="card-event">
   <form id="event-form">
     <textarea id="nomeEvento" placeholder="Nome evento"></textarea>
-    <textarea id="orarioEvento" placeholder="Orario"></textarea>
+    <textarea id="orarioEvento" placeholder="23:59"></textarea>
     <textarea id="descrizioneEvento" placeholder="Descrizione" class="textarea-description"></textarea>
   </form>
 
